--- a/sass/main.scss
+++ b/sass/main.scss
@@ -945,7 +945,7 @@ button {
 /////meet////
 .suman-video {
   width: 70%;
-  height: 300px;
+  height: 400px;
   @extend.m-center;
   position: relative;
   top: 50px;
@@ -974,6 +974,7 @@ button {
   }
 }
 .pro-info {
+  margin-top: 60px;
   margin-bottom: 100px;
 }
 ////end meet///
