--- a/views/content/cart.html
+++ b/views/content/cart.html
@@ -63,7 +63,7 @@
               <p class="brand-primary letter-space">Shipping Charges applicable<sup>*</sup> for all other cities and countries.</p>
             </div>
             <div class="col-md-6">
-              <div class="text-right">
+              <div class="text-right cart-btn">
                 <a href="" class="btn btn-primary text-uppercase continue">Continue Shopping</a>
                 <a href="" class="btn btn-primary text-uppercase">Proceed to checkout</a>
               </div>
