--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -13,7 +13,7 @@
     </div>
     <div class="health-chart">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8">
+        <div class="col-md-offset-2 col-md-8 col-sm-12">
           <div class="health-tab healthchart-list">
             <div class="inline-block v-top align">
               <div class="get-round">
