--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -44,6 +44,10 @@
     .remove {
       margin-top: 55px;
     }
+    .cart-grand-total {
+      padding: 10px 25px;
+      font-size: 18px;
+    }
   }
 }
 @media (max-width: $screen-sm-max) {
@@ -132,6 +136,10 @@
     .remove {
       margin-top: 30px;
     }
+    .cart-btn {
+      margin: 10px 0;
+      text-align: center;
+    }
   }
 }
 @media (max-width: $screen-xs-max) {
@@ -206,8 +214,11 @@
       width: 405px;
     }
   }
-  .cart-main h3 {
-    font-size: 17px;
+  .cart-main {
+    padding: 40px 0;
+    h3 {
+      font-size: 17px;
+    }
   }
   .cart-table {
     .cart-imgholder {
@@ -247,6 +258,13 @@
           margin: 0;
         }
       }
+    }
+    .cart-grand-total {
+      padding: 10px 15px;
+      font-size: 16px;
+    }
+    .shipping p {
+      font-size: 12px;
     }
   }
 }
@@ -332,8 +350,11 @@
       right: -30px;
     }
   }
-  .cart-main h3 {
-    font-size: 14px;
+  .cart-main {
+    padding: 30px 0;
+    h3 {
+      font-size: 14px;
+    }
   }
   .cart-table {
     .cart-imgholder {
@@ -360,6 +381,13 @@
       button {
         padding: 4px 10px;
       }
+    }
+    .cart-grand-total {
+      padding: 10px;
+      font-size: 13px;
+    }
+    .shipping p {
+      font-size: 12px;
     }
   }
 }
