--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -15,7 +15,7 @@
     </div>
     <div class="health-chart">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8">
+        <div class="col-md-offset-2 col-md-8 col-sm-12">
           <div class="health-tab healthchart-list">
             <div class="inline-block v-top">
               <div class="consult-chart relate inline-block text-center">
