--- a/views/content/healthmanagementdetail.html
+++ b/views/content/healthmanagementdetail.html
@@ -7,7 +7,7 @@
   </div>
   <div class="container">
     <div class="get-up brand-brown-bg relate">
-      <h3 class="text-center text-bold brand-brown-dark health-heading">LACTATION WITH WEIGHT LOSS</h3>
+      <h2 class="text-center text-bold brand-brown-dark health-heading">LACTATION WITH WEIGHT LOSS</h2>
       <p class="white health-descp">
         This is a happy but a hectic and phase in woman’s life. She is juggling between taking care of her young one and herself. We offer personalized diet chart for lactation that takes care of your nutritional requirements during this phase and also help you
         shed those extra kilos in the right way.
@@ -15,7 +15,7 @@
     </div>
     <div class="health-chart">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8 col-sm-12">
+        <div class="col-md-offset-1 col-md-10 col-sm-12">
           <div class="health-tab healthchart-list">
             <div class="inline-block v-top">
               <div class="consult-chart relate inline-block text-center">
@@ -28,7 +28,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price text-capitalize">1 month</p>
                     </div>
                   </uib-tab-heading>
@@ -36,7 +36,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
+                      <p class="white text-bold text-uppercase">gold</p>
                       <p class="price">Rs 9900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -78,7 +78,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
+                      <p class="white text-bold text-uppercase">platinum</p>
                       <p class="price">Rs 17900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -120,7 +120,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
-                      <p class="white text-uppercase">diamond</p>
+                      <p class="white text-bold text-uppercase">diamond</p>
                       <p class="price">Rs 27900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -174,7 +174,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price text-capitalize">2 months</p>
                     </div>
                   </uib-tab-heading>
@@ -182,7 +182,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
+                      <p class="white text-bold text-uppercase">gold</p>
                       <p class="price">Rs 18900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -190,7 +190,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
+                      <p class="white text-bold text-uppercase">platinum</p>
                       <p class="price">Rs 33900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -198,7 +198,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
+                      <p class="white text-bold text-uppercase">diamond</p>
                       <p class="price">Rs 47900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -218,7 +218,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price text-capitalize">4 months</p>
                     </div>
                   </uib-tab-heading>
@@ -226,7 +226,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
+                      <p class="white text-bold text-uppercase">gold</p>
                       <p class="price">Rs 34900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -234,7 +234,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
+                      <p class="white text-bold text-uppercase">platinum</p>
                       <p class="price">Rs 59900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -242,7 +242,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
+                      <p class="white text-bold text-uppercase">diamond</p>
                       <p class="price">Rs 77900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -262,7 +262,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price text-capitalize">6 months</p>
                     </div>
                   </uib-tab-heading>
@@ -270,7 +270,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
+                      <p class="white text-bold text-uppercase">gold</p>
                       <p class="price">Rs 49900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -278,7 +278,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
+                      <p class="white text-bold text-uppercase">platinum</p>
                       <p class="price">Rs 89900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
@@ -286,7 +286,7 @@
                 <uib-tab>
                   <uib-tab-heading class="duration">
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
+                      <p class="white text-bold text-uppercase">diamond</p>
                       <p class="price">Rs 99900<sup>*</sup></p>
                   </uib-tab-heading>
                 </uib-tab>
