--- a/views/content/weightmanagement.html
+++ b/views/content/weightmanagement.html
@@ -13,10 +13,10 @@
     </div>
     <div class="health-chart">
       <div class="row">
-        <div class="col-md-offset-2 col-md-8 col-sm-12">
+        <div class="col-md-offset-1 col-md-10 col-sm-12">
           <div class="health-tab healthchart-list">
             <div class="inline-block v-top align">
-              <div class="get-round">
+              <div class="get-round weight-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
                 <span class="weight-count font-vista">5 kgs</span>
@@ -27,7 +27,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price">8-10
                         <span>weeks</span>
                       </p>
@@ -37,8 +37,8 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 14900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">gold</p>
+                      <p class="price">Rs 14900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -47,8 +47,8 @@
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
-                      <h5 class="text-uppercase">specail addons</h5>
-                      <ul class="chart-list">
+                      <h5 class="text-uppercase font-semibold">specail addons</h5>
+                      <ul class="chart-list font-semibold">
                         <li>A folder, Diet Dairy and Measuremnet Card.</li>
                         <li>10 Pillars of Health Design and Fruit Exchange List.</li>
                         <li>Personalized exercise regime</li>
@@ -70,7 +70,7 @@
                         <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <span class="note"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
                       </div>
                     </div>
@@ -79,8 +79,8 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 27900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">platinum</p>
+                      <p class="price">Rs 27900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -89,8 +89,8 @@
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
-                      <h5 class="text-uppercase">specail addons</h5>
-                      <ul class="chart-list">
+                      <h5 class="text-uppercase font-semibold">specail addons</h5>
+                      <ul class="chart-list font-semibold">
                         <li>A folder, Diet Dairy and Measuremnet Card.</li>
                         <li>10 Pillars of Health Design and Fruit Exchange List.</li>
                         <li>Personalized exercise regime</li>
@@ -112,7 +112,7 @@
                         <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <span class="note"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
                       </div>
                     </div>
@@ -121,8 +121,8 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 37900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">diamond</p>
+                      <p class="price">Rs 37900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                   <div class="chart-info">
@@ -131,8 +131,8 @@
                         nutritionists, who are supervised by Suman. Spread over approximately two months (eight weeks) this is a designer diet programme tailor-made for you.</p>
                     </div>
                     <div class="tab-body">
-                      <h5 class="text-uppercase">specail addons</h5>
-                      <ul class="chart-list">
+                      <h5 class="text-uppercase font-semibold">specail addons</h5>
+                      <ul class="chart-list font-semibold">
                         <li>A folder, Diet Dairy and Measuremnet Card.</li>
                         <li>10 Pillars of Health Design and Fruit Exchange List.</li>
                         <li>Personalized exercise regime</li>
@@ -154,7 +154,7 @@
                         <p class="inline-block">Choosing the above programs also includes any of the issues you are facing in the "Health Management" Packages as well.</p>
                       </div>
                       <div class="plan">
-                        <span class="note"><sup>*</sup>inclusive of all taxes</span>
+                        <span class="note font-baubodi letter-space"><sup>*</sup>inclusive of all taxes</span>
                         <button class="btn btn-primary text-uppercase" type="button">take this plan</button>
                       </div>
                     </div>
@@ -165,7 +165,7 @@
           </div>
           <div class="healthchart-list">
             <div class="inline-block v-top align">
-              <div class="get-round">
+              <div class="get-round  weight-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
                 <span class="weight-count font-vista">10 kgs</span>
@@ -176,7 +176,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price">16-20
                         <span>weeks</span>
                       </p>
@@ -186,24 +186,24 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 27900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">gold</p>
+                      <p class="price">Rs 27900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 52900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">platinum</p>
+                      <p class="price">Rs 52900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 68900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">diamond</p>
+                      <p class="price">Rs 68900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
@@ -212,7 +212,7 @@
           </div>
           <div class="healthchart-list">
             <div class="inline-block v-top align">
-              <div class="get-round">
+              <div class="get-round  weight-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
                 <span class="weight-count font-vista">15 kgs</span>
@@ -223,7 +223,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price">24-30
                         <span>weeks</span>
                       </p>
@@ -233,24 +233,24 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 40900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">gold</p>
+                      <p class="price">Rs 40900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 74900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">platinum</p>
+                      <p class="price">Rs 74900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 97900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">diamond</p>
+                      <p class="price">Rs 97900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
@@ -259,7 +259,7 @@
           </div>
           <div class="healthchart-list">
             <div class="inline-block v-top align">
-              <div class="get-round">
+              <div class="get-round  weight-round">
                 <span class="text-uppercase brand-brown-dark-bg">loose</span>
                 <br>
                 <span class="weight-count font-vista">20 kgs</span>
@@ -270,7 +270,7 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">duration</p>
+                      <p class="white text-bold text-uppercase">duration</p>
                       <p class="price">32-40
                         <span>weeks</span>
                       </p>
@@ -280,24 +280,24 @@
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">gold</p>
-                      <p class="price">Rs 52900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">gold</p>
+                      <p class="price">Rs 52900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">platinum</p>
-                      <p class="price">Rs 95900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">platinum</p>
+                      <p class="price">Rs 95900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
                 <uib-tab>
                   <uib-tab-heading>
                     <div class="chart-head ">
-                      <p class="white text-uppercase">diamond</p>
-                      <p class="price">Rs 125900 <sup>*</sup></p>
+                      <p class="white text-bold text-uppercase">diamond</p>
+                      <p class="price">Rs 125900<sup>*</sup></p>
                     </div>
                   </uib-tab-heading>
                 </uib-tab>
@@ -317,12 +317,12 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="story-video">
-                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
                   </div>
                 </div>
                 <div class="col-md-6">
                   <div class="view-detail relate">
-                    <h4 class="text-left brand-brown-dark name font-semibold">{{slide.name}}</h4>
+                    <h4 class="text-left brand-brown-dark name font-semibold letter-space">{{slide.name}}</h4>
                     <span class="text-left block brand-primary letter-space">{{slide.location}}</span>
                     <div class="descp brand-primary">
                       <p class="text-justify">{{slide.descp}}</p>
