--- a/views/content/home.html
+++ b/views/content/home.html
@@ -115,7 +115,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="story-video">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dnmzOqhu62k" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
             <div class="col-md-6">
